# local-ai-platform

./: .gitignore  D4_B_ACCEPTANCE_REPORT.md  README.md  full_integrity_audit.sh  patch_install_progress.sh  test_service_health.html
.github/workflows/: build-win-release.yml
capability-registry/: repos.csv
core-platform/: README.md  fix_workflow_paths.py  requirements.txt  tmp_fix_workflow_paths.py
core-platform/apps/desktop/bundle/backend/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
core-platform/apps/desktop/bundle/backend/apps/desktop/src-tauri/capabilities/: default.json
core-platform/docs/: PRODUCT_INTRO.md
core-platform/scripts/: check_all_desktop_services.sh  start_all_desktop.sh  start_service.sh  stop_all.sh
core-platform/services/: __init__.py
data/artifact_registry/: errors.jsonl  events.jsonl  store.json
data/code_review_gate/: events.jsonl  store.json
data/design_system/: errors.jsonl  events.jsonl  store.json
data/repo_memory/: errors.jsonl  events.jsonl  store.json
data/skill_store/: errors.jsonl  events.jsonl  store.json
data/workflow_store/: events.jsonl  store.json
docs/reports/: C25_C6_PLANNER_GATEWAY_HEALTH_SELF_HEALING.md  P3_14_D2_C3_WORKFLOW_STORE_ENTERPRISE_ACCEPTED.md  P3_14_D2_D_ARTIFACT_REGISTRY_ENTERPRISE_ACCEPTED.md  P3_14_D2_E_SKILL_STORE_ENTERPRISE_ACCEPTED.md  P3_14_D2_F_CODE_REVIEW_GATE_ENTERPRISE_ACCEPTED.md  P3_14_D2_G_REPO_MEMORY_ENTERPRISE_ACCEPTED.md  P3_14_D7_A_ACCEPTANCE_REPORT.md  P3_14_D7_C10_FIX_POWERSHELL_BOOTSTRAP_ESCAPING.md  (+25 more)
scripts/: bootstrap_local_ai_platform.sh
(+818 files in other folders)
